--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {},
     "autoload": {
         "files": [
-            "t_dump.php"
+            "src/t_dump.php"
         ]
     }
 }
