--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,14 @@
 {
     "name": "pzkpde/t_dump",
     "description": "Dumping variables directly in Telegram",
+    "keywords": [
+        "dd",
+        "dump",
+        "telegram",
+        "utils",
+        "debug",
+        "vardumper"
+    ],
     "type": "library",
     "license": "MIT",
     "authors": [
